IconManager - LazyIcon.java - Simplified to always use icon size provided by the actual icon implementation - Icons.java, DemoIcons.java - Removed redundant size declarations
Demo
- NoWikiPage.java, OracleWikiPage.java, WebLafWikiPage.java - Simplified icon usage
- language.xml - Fixed wiki reference title text

--- a/modules/demo/src/com/alee/demo/language/language.xml
+++ b/modules/demo/src/com/alee/demo/language/language.xml
@@ -123,7 +123,7 @@
                     <value lang="ru">JDK статья:</value>
                 </record>
                 <record key="weblaf">
-                    <value lang="en"> article:</value>
+                    <value lang="en">Wiki article:</value>
                     <value lang="ru">Wiki статья:</value>
                 </record>
                 <record key="none">
