LanguageManager - Added XSDs for XML dictionaries, records, values and other serialized objects - core-language.xml, ui-language.xml, demo-language.xml - Added xmlns references - XmlSkin.xsd - Removed as redundant, `Skin.xsd` now defines XML root element - ui-language.xml - Fixed XML typo - Class.xsd - Removed redundant comments

--- a/modules/core/src/com/alee/managers/language/resources/core-language.xml
+++ b/modules/core/src/com/alee/managers/language/resources/core-language.xml
@@ -1,4 +1,4 @@
-<Dictionary name="WebLaF core module" prefix="weblaf">
+<Dictionary name="WebLaF core module" prefix="weblaf" xmlns="http://weblookandfeel.com/language">
     <Dictionary name="Time" prefix="time">
         <Dictionary name="Units" prefix="units">
             <Dictionary name="Short name" prefix="short">
