--- a/modules/demo/src/com/alee/demo/language/demo-language.xml
+++ b/modules/demo/src/com/alee/demo/language/demo-language.xml
@@ -1,4 +1,4 @@
-<Dictionary name="WebLaF demo module" prefix="demo">
+<Dictionary name="WebLaF demo module" prefix="demo" xmlns="http://weblookandfeel.com/language">
     <Dictionary name="Tools" prefix="tool">
         <record key="skin">
             <value lang="en" state="tooltip">Application skin</value>
