FileChooser - Added critical fixes for non-existent file names selection in the `save` mode of `JFileChooser` [ #419 ] - Added fix to allow directory selection in `save` mode - ui-language.xml - Fixed russian tiles display mode name
Utilities
- FileUtils.java - Non-existent files now use file name as display file name
- FileUtils.java - Added extra filtering method based on API `Filter` class

--- a/modules/ui/src/com/alee/managers/language/resources/ui-language.xml
+++ b/modules/ui/src/com/alee/managers/language/resources/ui-language.xml
@@ -634,7 +634,7 @@
         </record>
         <record key="view.tiles">
             <value lang="en">Tiles</value>
-            <value lang="ru">Тайлы</value>
+            <value lang="ru">Плитка</value>
             <value lang="pl">Kafelki</value>
             <value lang="ar">أسطح</value>
             <value lang="es">Azulejos</value>
