Major tree models update All three main tree models undergone a major rework to fix multiple issues with filtering, nodes addition and removal. Also added some general performance improvements related to multiple nodes insertion and removal. Along with these improvements I've added some improvements for `InterfaceTree` which should now properly function at all times and should keep its model in sync with tracked component tree.
Trees
- WebTreeModel.java - Enhanced performance for multiple nodes insertion and removal
- AsyncTreeModel.java, ExTreeModel.java - Adjusted to support new `WebTreeModel` multiple nodes removal method implementations
- ExTreeModel.java, WebExTree.java, WebExCheckBoxTree.java, AsyncTreeModel.java, WebAsyncTree.java - Simplified sorting/filtering method names
- WebExTree.java, WebExCheckBoxTree.java, WebAsyncTree.java, WebFileTree.java - Simplified node removal methods

ExTree
- ExTreeDataProvider.java - Method `isLeaf` removed as redundant, simply return empty children instead
- ExTreeModel.java - Simplified data loading and nodes caching which had redundant complexity due to copy-paste from `AsyncTreeModel`
- ExTreeModel.java - Added extra cache map for storing parent identifiers for child nodes so we can locate them even if model is currently filtered
- ExTreeModel.java - Added performance improvements to avoid calling multiple visual updates when it is not necessary
- WebExTree.java - Removed redundant parent check on node removal, parent might be `null` when filtering is applied to the tree so we can't count on it
- SampleExDataProvider.java - Method `isLea` removed as redundant

AsyncTree
- AsyncTreeModel.java - Added minor fixes for a few internal caching issues

InterfaceInspector
- InterfaceTreeDataProvider.java - Method `isLeaf` removed as redundant, slightly refactored `getChildren` method
- InterfaceTreeNode.java - Removed state save/restore upon nodes addition and removal to avoid performance issues
- InterfaceTreeNode.java - Now s

--- a/modules/demo/src/com/alee/demo/language/demo-language.xml
+++ b/modules/demo/src/com/alee/demo/language/demo-language.xml
@@ -1288,6 +1288,16 @@
                     <value lang="en">WebCollapsiblePane</value>
                     <value lang="ru">WebCollapsiblePane</value>
                 </record>
+                <Dictionary prefix="data">
+                    <record key="title">
+                        <value lang="en">Panel title</value>
+                        <value lang="ru">Заголовок панели</value>
+                    </record>
+                    <record key="content">
+                        <value lang="en">Sample\nmultiline\ntext</value>
+                        <value lang="ru">Простой\nмультистрочный\nтекст</value>
+                    </record>
+                </Dictionary>
                 <Dictionary prefix="left">
                     <record key="title">
                         <value lang="en">Left WebCollapsiblePane</value>
